--- a/service-front/app/src/Actor/templates/actor/request-activation-key/check-details-and-consent.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/check-details-and-consent.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <div class="govuk-width-container">
+    <div class="govuk-width-container" xmlns="http://www.w3.org/1999/html">
         {{ include('@partials/account-bar.html.twig') }}
         {{ include('@partials/welsh-switch.html.twig') }}
 
@@ -15,54 +15,114 @@
                     <h1 class="govuk-heading-xl">{% trans %}Check your details{% endtrans %}</h1>
 
                     <dl class="govuk-summary-list govuk-summary-list">
-                        {% if data.actor_role is defined %}
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                {% trans %}Your role{% endtrans %}
+                                {% trans %}Address on paper LPA{% endtrans %}
                             </dt>
-                            {% if data.actor_role|lower == 'donor' %}
-                                <dd class="govuk-summary-list__value">
-                                    {% trans %}Donor{% endtrans %}
-                                </dd>
-                            {% else %}
-                                <dd class="govuk-summary-list__value">
-                                    {% trans %}Attorney{% endtrans %}
-                                </dd>
-                            {% endif %}
+                            <dd class="govuk-summary-list__value">
+                                {{ data.actor_address_1 }}<br>
+                                {{ data.actor_address_2 }} {{ data.actor_address_2 ? "<br>" : "" | raw }}
+                                {{ data.actor_address_town }}
+                            </dd>
                             <dd class="govuk-summary-list__actions">
-                                <a class="govuk-link" id="change-your-role" href="{{ path('lpa.add.actor-role') }}">
-                                    {% trans %}Change<span class="govuk-visually-hidden"> role</span>{% endtrans %}
+                                <a class="govuk-link" id="change-donors-name" href="{{ path('lpa.add.actor-address') }}">
+                                    {% trans %}Change<span class="govuk-visually-hidden"> address</span>{% endtrans %}
                                 </a>
                             </dd>
                         </div>
-                        {% if data.actor_role|lower == 'attorney' %}
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                {% trans %}Address on paper LPA{% endtrans %}
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                {{ data.address_on_paper ? data.address_on_paper : 'Same as above' }}
+                            </dd>
+                            <dd class="govuk-summary-list__actions">
+                                <a class="govuk-link" id="change-donors-name" href="{{ data.address_on_paper ? path('lpa.add.address-on-paper') : path('lpa.add.actor-address') }}">
+                                    {% if data.address_on_paper %}
+                                        {% trans %}Change<span class="govuk-visually-hidden"> address on paper</span>{% endtrans %}
+                                    {% else %}
+                                        {% trans %}Change<span class="govuk-visually-hidden"> address</span>{% endtrans %}
+                                    {% endif %}
+                                </a>
+                            </dd>
+                        </div>
+                        {% if data.actor_role is defined %}
                             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">
-                                    {% trans %}Donor's name{% endtrans %}
+                                    {% trans %}Your role{% endtrans %}
                                 </dt>
-                                <dd class="govuk-summary-list__value">
-                                    {{ data.donor_first_names ~ ' ' ~  data.donor_last_name }}
-                                </dd>
+                                {% if data.actor_role|lower == 'donor' %}
+                                    <dd class="govuk-summary-list__value">
+                                        {% trans %}Donor{% endtrans %}
+                                    </dd>
+                                {% else %}
+                                    <dd class="govuk-summary-list__value">
+                                        {% trans %}Attorney{% endtrans %}
+                                    </dd>
+                                {% endif %}
                                 <dd class="govuk-summary-list__actions">
-                                    <a class="govuk-link" id="change-donors-name" href="{{ path('lpa.add.donor-details') }}">
-                                        {% trans %}Change<span class="govuk-visually-hidden"> donor's name</span>{% endtrans %}
+                                    <a class="govuk-link" id="change-your-role" href="{{ path('lpa.add.actor-role') }}">
+                                        {% trans %}Change<span class="govuk-visually-hidden"> role</span>{% endtrans %}
                                     </a>
                                 </dd>
                             </div>
-                            <div class="govuk-summary-list__row">
-                                <dt class="govuk-summary-list__key">
-                                    {% trans %}Donor's date of birth{% endtrans %}
-                                </dt>
-                                <dd class="govuk-summary-list__value">
-                                    {{ code_date(data.donor_dob) }}
-                                </dd>
-                                <dd class="govuk-summary-list__actions">
-                                    <a class="govuk-link" id="change-donors-date-of-birth" href="{{ path('lpa.add.donor-details') }}">
-                                        {% trans %}Change<span class="govuk-visually-hidden"> donor's date of birth</span>{% endtrans %}
-                                    </a>
-                                </dd>
-                            </div>
-                        {% endif %}
+                            {% if data.actor_role|lower == 'attorney' %}
+                                <div class="govuk-summary-list__row">
+                                    <dt class="govuk-summary-list__key">
+                                        {% trans %}Donor's name{% endtrans %}
+                                    </dt>
+                                    <dd class="govuk-summary-list__value">
+                                        {{ data.donor_first_names ~ ' ' ~  data.donor_last_name }}
+                                    </dd>
+                                    <dd class="govuk-summary-list__actions">
+                                        <a class="govuk-link" id="change-donors-name" href="{{ path('lpa.add.donor-details') }}">
+                                            {% trans %}Change<span class="govuk-visually-hidden"> donor's name</span>{% endtrans %}
+                                        </a>
+                                    </dd>
+                                </div>
+                                <div class="govuk-summary-list__row">
+                                    <dt class="govuk-summary-list__key">
+                                        {% trans %}Donor's date of birth{% endtrans %}
+                                    </dt>
+                                    <dd class="govuk-summary-list__value">
+                                        {{ code_date(data.donor_dob) }}
+                                    </dd>
+                                    <dd class="govuk-summary-list__actions">
+                                        <a class="govuk-link" id="change-donors-date-of-birth" href="{{ path('lpa.add.donor-details') }}">
+                                            {% trans %}Change<span class="govuk-visually-hidden"> donor's date of birth</span>{% endtrans %}
+                                        </a>
+                                    </dd>
+                                </div>
+                            {% endif %}
+                            {% if data.actor_role|lower == 'donor' %}
+                                <div class="govuk-summary-list__row">
+                                    <dt class="govuk-summary-list__key">
+                                        {% trans %}Attorney's name{% endtrans %}
+                                    </dt>
+                                    <dd class="govuk-summary-list__value">
+                                        {{ data.attorney_first_names ~ ' ' ~  data.attorney_last_name }}
+                                    </dd>
+                                    <dd class="govuk-summary-list__actions">
+                                        <a class="govuk-link" id="change-donors-name" href="{{ path('lpa.add.attorney-details') }}">
+                                            {% trans %}Change<span class="govuk-visually-hidden"> attorney's name</span>{% endtrans %}
+                                        </a>
+                                    </dd>
+                                </div>
+                                <div class="govuk-summary-list__row">
+                                    <dt class="govuk-summary-list__key">
+                                        {% trans %}Attorney's date of birth{% endtrans %}
+                                    </dt>
+                                    <dd class="govuk-summary-list__value">
+                                        {{ code_date(data.attorney_dob) }}
+                                    </dd>
+                                    <dd class="govuk-summary-list__actions">
+                                        <a class="govuk-link" id="change-donors-date-of-birth" href="{{ path('lpa.add.attorney-details') }}">
+                                            {% trans %}Change<span class="govuk-visually-hidden"> attorney's date of birth</span>{% endtrans %}
+                                        </a>
+                                    </dd>
+                                </div>
+                            {% endif %}
                         {% endif %}
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
