--- a/service-front/app/src/Actor/templates/actor/request-activation-key/actor-address.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/actor-address.html.twig
@@ -1,6 +1,6 @@
 {% extends '@actor/layout.html.twig' %}
 
-{% block html_title %}{% trans %}What is your address?{% endtrans %} - {{ parent() }}{% endblock %}
+{% block html_title %}{% trans %}We need some more details?{% endtrans %} - {{ parent() }}{% endblock %}
 
 {% block content %}
     <div class="govuk-width-container">
@@ -16,9 +16,11 @@
             {{ govuk_error_summary(form) }}
 
             <div class="govuk-grid-row">
-                <div class="govuk-grid-column-one-half">
-
-                    <h1 class="govuk-heading-xl">{% trans %}What is your address?{% endtrans %}</h1>
+                <div class="govuk-grid-column-three-quarters">
+                    <h1 class="govuk-heading-xl">{% trans %}We need some more details{% endtrans %}</h1>
+                    <p class="govuk-body">{% trans %}We need a few extra details to make sure we have the right LPA for your activation key request.{% endtrans %}</p>
+                    <h2 class="govuk-heading-l">{% trans %}What is your current address?{% endtrans %}</h2>
+                    <p class="govuk-body">{% trans %}Your activation key will be posted to this address.{% endtrans %}</p>
 
                     {{ govuk_form_open(form) }}
 
@@ -44,6 +46,31 @@
                             Postcode
                         </span>
                         <p class="govuk-body govuk-!-font-weight-bold">{{ postcode }}</p>
+                    </div>
+
+                    <h2 class="govuk-heading-l">{% trans %}Is this the same address as your address on the paper LPA?{% endtrans %}</h2>
+
+                    <div class="govuk-form-group">
+                        <fieldset class="govuk-fieldset">
+
+                            {{ govuk_form_element(form.get('actor_address_check_radio'), {'value_options':
+                                [
+                                    {
+                                        'label': 'Yes, it is the same as my address on the paper LPA'|trans,
+                                        'value': 'Yes'
+                                    },
+                                    {
+                                        'label': 'No, it is different than my address on the paper LPA'|trans,
+                                        'value': 'No'
+                                    },
+                                    {
+                                        'label': 'I am not sure if it\'s the same address on the paper LPA'|trans,
+                                        'value': 'Not sure'
+                                    }
+                                ]}
+                            )}}
+
+                        </fieldset>
                     </div>
 
                     <button data-prevent-double-click="true" type="submit" class="govuk-button">{% trans %}Continue{% endtrans %}</button>
