--- a/service-front/app/src/Actor/templates/actor/form-error-messages.html.twig
+++ b/service-front/app/src/Actor/templates/actor/form-error-messages.html.twig
@@ -65,6 +65,8 @@
 {% trans %}Enter the attorney's first names{% context %}error{% notes %}Add Older LPA{% endtrans %}
 {% trans %}Enter the attorney's last name{% context %}error{% notes %}Add Older LPA{% endtrans %}
 {% trans %}Enter the attorney's date of birth{% context %}error{% notes %}Add Older LPA{% endtrans %}
+{% trans %}Select whether this is the same address as your address on the paper LPA{% context %}error{% notes %}Add Older LPA{% endtrans %}
+
 
 {# Create viewer code #}
 {% trans %}Enter an organisation name{% context %}error{% notes %}Create viewer code{% endtrans %}
