autocomplete on county field corrected

--- a/service-front/app/src/Actor/templates/actor/request-activation-key/actor-address.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/actor-address.html.twig
@@ -43,7 +43,7 @@
 
                     {{ govuk_form_element(form.get('actor_address_county'), {
                         'label': 'County (optional)' | trans,
-                        'autocomplete': 'actor-address-county',
+                        'autocomplete': 'address-level2',
                     }) }}
 
                     <h2 class="govuk-heading-l">{% trans %}Is this the same address as your address on the paper LPA?{% endtrans %}</h2>
