--- a/service-front/app/src/Actor/templates/actor/request-activation-key/actor-address.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/actor-address.html.twig
@@ -38,12 +38,12 @@
 
                     {{ govuk_form_element(form.get('actor_address_town'), {
                         'label': 'Town or city' | trans,
-                        'autocomplete': 'address-level1'
+                        'attr': { 'class': 'govuk-input govuk-!-width-two-thirds', 'autocomplete': 'address-level1'}
                     }) }}
 
                     {{ govuk_form_element(form.get('actor_address_county'), {
                         'label': 'County (optional)' | trans,
-                        'autocomplete': 'address-level2',
+                        'attr': { 'class': 'govuk-input govuk-!-width-two-thirds', 'autocomplete': 'address-level2'}
                     }) }}
 
                     <h2 class="govuk-heading-l">{% trans %}Is this the same address as your address on the paper LPA?{% endtrans %}</h2>
