--- a/service-front/app/src/Common/templates/partials/govuk_form.html.twig
+++ b/service-front/app/src/Common/templates/partials/govuk_form.html.twig
@@ -60,7 +60,6 @@
     {{ block('form_element_simple') }}
 {%- endblock form_input_text -%}
 
-
 {%- block form_input_password -%}
     {%- set type = type|default('password') -%}
     {%- set value = '' %}
@@ -253,7 +252,7 @@
 
 {%- block form_input_area -%}
         <textarea class="govuk-textarea"
-                  id="{{ element.getName() }}" name="{{ element.getName() }}"
+                  id="{{ element.getName() }}" name="{{ element.getName() }}" value="{{ element.getValue() }}"
                   rows="{% if rows is defined %}{{ rows }}{% else %}5{% endif %}"
                   {% if autocomplete is defined and autocomplete is not empty %}autocomplete="{{ autocomplete }}"{% endif %}
                   {% if aria_labelledby is defined and aria_labelledby is not empty %}aria-labelledby="{{ aria_labelledby }}"{% endif %}
