--- a/service-front/app/src/Actor/templates/actor/request-activation-key/check-details-and-consent.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/check-details-and-consent.html.twig
@@ -17,7 +17,7 @@
                     <dl class="govuk-summary-list govuk-summary-list">
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                {% trans %}Address on paper LPA{% endtrans %}
+                                {% trans %}Current address{% endtrans %}
                             </dt>
                             <dd class="govuk-summary-list__value">
                                 {{ data.actor_address_1 }}<br>
