--- a/service-front/app/src/Common/templates/partials/govuk_form.html.twig
+++ b/service-front/app/src/Common/templates/partials/govuk_form.html.twig
@@ -251,10 +251,10 @@
 {%- endblock form_input -%}
 
 {%- block form_input_area -%}
-        <textarea class="govuk-textarea"
-                  id="{{ element.getName() }}" name="{{ element.getName() }}" value="{{ element.getValue() }}"
-                  rows="{% if rows is defined %}{{ rows }}{% else %}5{% endif %}"
-                  {% if autocomplete is defined and autocomplete is not empty %}autocomplete="{{ autocomplete }}"{% endif %}
-                  {% if aria_labelledby is defined and aria_labelledby is not empty %}aria-labelledby="{{ aria_labelledby }}"{% endif %}
-        ></textarea>
+    <textarea class="govuk-textarea" id="{{ element.getName() }}" name="{{ element.getName() }}"
+            rows="{% if rows is defined %}{{ rows }}{% else %}5{% endif %}"
+            {% if autocomplete is defined and autocomplete is not empty %}autocomplete="{{ autocomplete }}"{% endif %}
+            {% if aria_labelledby is defined and aria_labelledby is not empty %}aria-labelledby="{{ aria_labelledby }}"{% endif %}>
+            {{ element.getValue() }}
+    </textarea>
 {%- endblock form_input_area -%}
