use template form open

--- a/service-front/app/src/Actor/templates/actor/password-reset-request.html.twig
+++ b/service-front/app/src/Actor/templates/actor/password-reset-request.html.twig
@@ -16,7 +16,7 @@
 
                 {{ govuk_error_summary(form) }}
 
-                <form method="post" name="create_account" novalidate>
+                {{ govuk_form_open(form) }}
                     <fieldset class="govuk-fieldset">
 
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
@@ -37,7 +37,7 @@
                             {% trans %}Email me the link{% endtrans %}
                         </button>
                     </fieldset>
-                </form>
+                {{ govuk_form_close() }}
             </div>
         </div>
     </main>
