--- a/service-front/app/src/Actor/templates/actor/request-cleanse-note.txt.twig
+++ b/service-front/app/src/Actor/templates/actor/request-cleanse-note.txt.twig
@@ -12,7 +12,7 @@ Current postal address: {{ data.actor_current_address | join(', ') }}
 Address on LPA: {{ (data.address_on_paper | split('\n')) | join(', ') }}
 {% endif %}
 {% if data.telephone is defined %}
-{{ data.telephone }}
+Phone: {{ data.telephone }}
 {% endif %}
 Email: {{ data.email }}
 {% if data.actor_role is defined and data.actor_role == 'attorney' %}
