--- a/service-front/app/src/Actor/templates/actor/request-activation-key/check-details-and-consent.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/check-details-and-consent.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <div class="govuk-width-container" xmlns="http://www.w3.org/1999/html">
+    <div class="govuk-width-container">
         {{ include('@partials/account-bar.html.twig') }}
         {{ include('@partials/welsh-switch.html.twig') }}
 
