--- a/service-front/app/src/Actor/templates/actor/request-cleanse-note.txt.twig
+++ b/service-front/app/src/Actor/templates/actor/request-cleanse-note.txt.twig
@@ -8,8 +8,8 @@ Requester: {{ data.first_names }} {{ data.last_name }}
 DOB: {{ data.dob.format('d/m/Y') }}
 Current postal address: {{ data.actor_current_address | join(', ') }}
 {% endif %}
-{% if data.address_on_paper is defined and date.address_on_paper is not empty %}
-Address on LPA: {{ (data.address_on_paper | split('\n')) | join(', ') }}
+{% if data.address_on_paper is defined and data.address_on_paper is not empty %}
+Address on LPA: {{ data.address_on_paper | split('\n') | map(i => "#{i}" | trim('\r ')) | join(', ') }}
 {% endif %}
 {% if data.telephone is defined %}
 Phone: {{ data.telephone }}
