--- a/service-front/app/src/Common/templates/partials/govuk_form.html.twig
+++ b/service-front/app/src/Common/templates/partials/govuk_form.html.twig
@@ -255,6 +255,6 @@
             rows="{% if rows is defined %}{{ rows }}{% else %}5{% endif %}"
             {% if autocomplete is defined and autocomplete is not empty %}autocomplete="{{ autocomplete }}"{% endif %}
             {% if aria_labelledby is defined and aria_labelledby is not empty %}aria-labelledby="{{ aria_labelledby }}"{% endif %}>
-            {{ element.getValue() }}
+        {{- element.getValue() -}}
     </textarea>
 {%- endblock form_input_area -%}
